MERN-3-TIER-APP-k8s/frontend-deployment-hpa2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend2
  template:
    metadata:
      labels:
        app: frontend2
    spec:
      containers:
        - name: frontend2
          image: shashank20062000/mern-3tier-frontend:18 # <-- change
          imagePullPolicy: Always
          ports:
            - containerPort: 5050
          resources:
            requests:
              cpu: "50m"
              memory: "125Mi"
            limits:
              cpu: "100m"
              memory: "250Mi"
