MERN-3-TIER-APP-k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 5050
      targetPort: 5050
     # use NodePort if you don't have a cloud LB
