MERN-3-TIER-APP-k8s/jenkins_old_volume.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
spec:
  serviceName: jenkins-headless
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: jenkins
          image: shashank20062000/jenkins-and-docker
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home

        - name: dind
          image: docker:26-dind
          securityContext:
            privileged: true
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 2375
              name: dind
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home-existing
        - name: dind-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-headless
spec:
  clusterIP: None
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32080
