MERN-3-TIER-APP-k8s/mongo-express-service.yaml
# Option A (Cloud / EKS): LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  selector:
    app: mongo-express
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: LoadBalancer
