MERN-3-TIER-APP-k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - name: eg
  rules:
    # Backend (API)
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 8383   # service port (ClusterIP)
    # Frontend (everything else)
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 5050
          weight: 100
        - name: frontend2
          port: 5050
          weight: 0
